--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <title>A birthday gift for Pan Jing</title>
+<link rel="stylesheet" href="./src/common.css">
+<link rel="stylesheet" href="./src/gift.css">
 </head>
 <body>
+
+<script src="./src/gift.js"></script>
 </body>
 </html>
