--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <link rel="stylesheet" href="./src/gift.css">
 </head>
 <body>
-
+<div class="gift" id="J_gift"></div>
 <script src="./src/zepto.js"></script>
+<script src="./src/garden.js"></script>
 <script src="./src/gift.js"></script>
 </body>
 </html>
