--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <rect x="10" y="475.571" fill="#fefae9" width="180" height="4" />
   </svg>
 </div>
-
+<div class="message">Happy Birthday</div>
 <script src="./src/zepto.js"></script>
 <script src="./src/garden.js"></script>
 <script src="./src/gift.js"></script>
