--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <title>A birthday gift for Pan Jing</title>
+<script>(function(a,e){var r=e.documentElement,t=function(){r.style.fontSize=r.getBoundingClientRect().width/16+"px"},n=null;a.addEventListener("onorientationchange"in a?"orientationchange":"resize",function(a){clearTimeout(n);n=setTimeout(t,300)});t()})(window,document,undefined);</script>
 <link rel="stylesheet" href="./src/common.css">
 <link rel="stylesheet" href="./src/gift.css">
 </head>
@@ -17,6 +18,7 @@
 
 <div class="gift" id="J_gift">
   <div class="heart" id="J_heart"><canvas id="J_canvas"></canvas></div>
+  <div class="avatar" id="J_avatar"></div>
 </div>
 
 <div class="cake">
