--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 
 <div class="gift" id="J_gift">
   <div class="heart" id="J_heart"><canvas id="J_canvas"></canvas></div>
-  <div class="avatar" id="J_avatar"></div>
+  <p class="text"></p>
 </div>
 
-<div class="cake">
+<div class="cake" id="J_cake">
+  <textarea></textarea>
   <div class="velas">
     <div class="fuego"></div>
     <div class="fuego"></div>
