--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
 <div class="gift" id="J_gift">
   <div class="heart" id="J_heart"><canvas id="J_canvas"></canvas></div>
-  <p class="text"></p>
+  <div class="text">
+    <p class="words">Love u forever and ever!</p>
+    <p class="signature">- Yuan Zhaohao</p>
+  </div>
 </div>
 
 <div class="cake" id="J_cake">
