完成计时器

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="heart" id="J_heart"><canvas id="J_canvas"></canvas></div>
   <div class="time" id="J_time">
     <p class="info j_info">We have fallen in love for</p>
-    <div class="count j_count"><i>5</i>month <i>9</i>day <i>9</i>hr <i>45</i>min <i>9</i>sec</div>
+    <div class="count j_count"></div>
     <div class="text j_text">
       <p class="words">Love u forever and ever!</p>
       <p class="signature">- Yuan Zhaohao</p>
