完成计时器

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div class="cake" id="J_cake">
   <textarea id="J_textarea">
-    <div class="velas">
+    <div class="velas j_velas">
       <div class="fuego"></div>
       <div class="fuego"></div>
       <div class="fuego"></div>
