--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <title>Happy birthday!</title>
 <script>(function(a,e){var r=e.documentElement,t=function(){r.style.fontSize=r.getBoundingClientRect().width/16+"px"},n=null;a.addEventListener("onorientationchange"in a?"orientationchange":"resize",function(a){clearTimeout(n);n=setTimeout(t,300)});t()})(window,document,undefined);</script>
-<link rel="stylesheet" href="./src/common.css">
-<link rel="stylesheet" href="./src/gift.css">
+<link rel="stylesheet" href="./build/common.css">
+<link rel="stylesheet" href="./build/gift.css">
 </head>
 <body>
 
@@ -62,8 +62,8 @@
   </textarea>
 </div>
 <div class="title" id="J_title">Happy Birthday</div>
-<script src="./src/zepto.js"></script>
-<script src="./src/garden.js"></script>
-<script src="./src/gift.js"></script>
+<script src="./build/zepto.js"></script>
+<script src="./build/garden.js"></script>
+<script src="./build/gift.js"></script>
 </body>
 </html>
