--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <div class="gift">
   <div class="heart" id="J_heart"><canvas id="J_canvas"></canvas></div>
   <div class="time" id="J_time">
-    <p class="info j_info">We have fallen in love for</p>
+    <p class="info j_info">My Dear:<br />We have fallen in love for</p>
     <div class="count j_count"></div>
     <div class="text j_text">
       <p class="words">Love u forever and ever!</p>
-      <p class="signature">- Yuan Zhaohao</p>
+      <p class="signature">- Your Stupid Boy</p>
     </div>
   </div>
 </div>
