--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <p class="info j_info">My Dear:<br />We have fallen in love for</p>
     <div class="count j_count"></div>
     <div class="text j_text">
-      <p class="words">Love u forever and ever!</p>
-      <p class="signature">- Your Stupid Boy</p>
+      <p class="words">Love u forever and ever!<br /><span class="signature">- Your Stupid Boy</span></p>
     </div>
   </div>
 </div>
