--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <div class="gift">
-  <div class="heart" id="J_heart"><canvas id="J_canvas"></canvas></div>
+  <div class="heart" id="J_heart"></div>
   <div class="time" id="J_time">
     <p class="info j_info">My Dear:<br />We have fallen in love for</p>
     <div class="count j_count"></div>
