优化: 转屏时重绘

--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
 <div class="title" id="J_title">Happy Birthday</div>
 <script src="./build/zepto.js"></script>
 <script src="./build/garden.js"></script>
-<script src="./build/gift.js"></script>
+<script src="./src/gift.js"></script>
 </body>
 </html>
