--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 <div class="gift">
   <div class="heart" id="J_heart"></div>
   <div class="time" id="J_time">
-    <p class="info j_info">My Dear:<br />We have fallen in love for</p>
-    <div class="count j_count"></div>
+    <div class="info j_info">
+      <p>My Dear:</p>
+      <p>We have fallen in love for</p>
+      <div class="count j_count"></div>
+    </div>
     <div class="text j_text">
       <p class="words">Love u forever and ever!<br /><span class="signature">- Mr. Yuan</span></p>
     </div>
