--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
 <div class="title" id="J_title">Happy Birthday</div>
 <script src="./build/zepto.js"></script>
 <script src="./build/garden.js"></script>
-<script src="./src/gift.js"></script>
+<script src="./build/gift.js"></script>
 </body>
 </html>
